tests222/tests2/test255.out
lli: <stdin>:1:1: error: expected top-level entity
line 2: unexpected continue statement
^
